--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
               </div>
               <div class="member-info">
                 <h4>Walter White</h4>
-                <span>Chief Medical Officer</span>
+                <span>Chef du departement medical</span>
               </div>
             </div>
           </div>
@@ -651,7 +651,7 @@
               </div>
               <div class="member-info">
                 <h4>Sarah Jhonson</h4>
-                <span>Anesthesiologist</span>
+                <span>Infirmier</span>
               </div>
             </div>
           </div>
@@ -669,7 +669,7 @@
               </div>
               <div class="member-info">
                 <h4>William Anderson</h4>
-                <span>Cardiology</span>
+                <span>Cardiologue</span>
               </div>
             </div>
           </div>
@@ -687,7 +687,7 @@
               </div>
               <div class="member-info">
                 <h4>Amanda Jepson</h4>
-                <span>Neurosurgeon</span>
+                <span>Neurologue</span>
               </div>
             </div>
           </div>
